<resources>
    <string name="app_name">QuickAndroid</string>
    <string name="about">About</string>
    <string name="demo_list">Demo List</string>
    <string name="database">Database</string>
    <string name="start">Start</string>
    <string name="label_count">Count：</string>
    <string name="input_count">Please input count</string>
    <string name="sqlcipher_helper">Sqlcipher Helper</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="label_decrypted_database_file_path">Decrypted database file\'s path:</string>
    <string name="label_encrypted_database_file_path">Encrypted database file\'s path:</string>
    <string name="select_dot">&#8230;</string>
    <string name="label_target_dir_path">Select saved directory:</string>
    <string name="label_target_file_name">Target filename</string>
    <string name="select_source_db">Select source database file</string>
    <string name="select_target_dir">Select target directory</string>
    <string name="input_filename">Input filename</string>
    <string name="label_key">Key:</string>
    <string name="input_key">Input key</string>
    <string name="operate_suc">Operate success</string>
    <string name="operate_failed">Operate failed</string>
    <string name="operate_error">Operate error</string>
    <string name="arcgis">Arcgis</string>
</resources>
