<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/rgType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rbEncrypt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/encrypt" />

            <RadioButton
                android:id="@+id/rbDecrypt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrypt" />

        </RadioGroup>

        <TextView
            android:id="@+id/tvLabelSrcFilePath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/label_decrypted_database_file_path"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgType" />

        <TextView
            android:id="@+id/tvSrcFilePath"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ellipsize="start"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toStartOf="@+id/btnSelectSrcFilePath"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelSrcFilePath"
            tools:text="/emulator/0/" />

        <Button
            android:id="@+id/btnSelectSrcFilePath"
            android:layout_width="@dimen/dp_40"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:onClickListener="@{listener}"
            android:text="@string/select_dot"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvSrcFilePath"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvLabelTargetDirPath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/label_target_dir_path"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSrcFilePath" />

        <TextView
            android:id="@+id/tvTargetDirPath"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ellipsize="start"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toStartOf="@+id/btnSelectTargetDirPath"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLabelTargetDirPath"
            tools:text="/emulator/0/" />

        <Button
            android:id="@+id/btnSelectTargetDirPath"
            android:layout_width="@dimen/dp_40"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:onClickListener="@{listener}"
            android:text="@string/select_dot"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvTargetDirPath"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilTargetFilename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSelectTargetDirPath">

            <com.chaychan.viewlib.PowerfulEditText
                android:id="@+id/etTargetFilename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_target_file_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilTargetFilename">

            <com.chaychan.viewlib.PowerfulEditText
                android:id="@+id/etKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_key" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:onClickListener="@{listener}"
            android:text="@string/start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilKey" />

    </android.support.constraint.ConstraintLayout>
</layout>